force-app/main/default/objects/Credit_Checking__c/Credit_Checking__c.object-meta.xml
<CustomObject>
    <label>Credit Checking</label>
    <nameField>
        <label>PIC Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credits Checking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>