force-app/main/default/objects/Credit_Checking__c/fields/Amount_PD_Dalam_6_Bulan_Terakhir__c.field-meta.xml
<CustomField>
    <fullName>Amount_PD_Dalam_6_Bulan_Terakhir__c</fullName>
    <label>Amount PD Dalam 6 Bulan Terakhir</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>