force-app/main/default/objects/Credit_Checking__c/fields/Count_Check__c.field-meta.xml
<CustomField>
    <fullName>Count_Check__c</fullName>
    <label>Count Check</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>