force-app/main/default/objects/Credit_Checking__c/fields/Deskripsi_Info_Negative__c.field-meta.xml
<CustomField>
    <fullName>Deskripsi_Info_Negative__c</fullName>
    <label>Deskripsi Info Negative</label>
    <type>TextArea</type>
</CustomField>