force-app/main/default/objects/Credit_Checking__c/fields/Info_Negative__c.field-meta.xml
<CustomField>
    <fullName>Info_Negative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Info Negative</label>
    <type>Checkbox</type>
</CustomField>