force-app/main/default/objects/Credit_Checking__c/fields/Info_Negative_Yes_No__c.field-meta.xml
<CustomField>
    <fullName>Info_Negative_Yes_No__c</fullName>
    <label>Info Negative Yes No</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>