force-app/main/default/objects/Credit_Checking__c/fields/Informasi_Lainnya__c.field-meta.xml
<CustomField>
    <fullName>Informasi_Lainnya__c</fullName>
    <label>Informasi Lainnya</label>
    <type>TextArea</type>
</CustomField>