force-app/main/default/objects/Credit_Checking__c/fields/Kepemilikan_Unit__c.field-meta.xml
<CustomField>
    <fullName>Kepemilikan_Unit__c</fullName>
    <label>Kepemilikan Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sertipikat Atas Nama Debitur</fullName>
            </value>
            <value>
                <fullName>Sertipikat Atas Nama Pasangan</fullName>
            </value>
            <value>
                <fullName>Sertipikat Atas Nama Debitur dan Pasangan</fullName>
            </value>
            <value>
                <fullName>Sertipikat Atas Nama Orang Tua</fullName>
            </value>
            <value>
                <fullName>Sertipikat Atas Nama Mertua</fullName>
            </value>
            <value>
                <fullName>Sertipikat Atas Nama Beberapa Orang</fullName>
            </value>
            <value>
                <fullName>Sertipikat Atas nama Badan Usaha</fullName>
            </value>
            <value>
                <fullName>Sertipikat Atas nama Pengurus Badan Usaha</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>