force-app/main/default/objects/Credit_Checking__c/fields/Kesesuaian_Bukti_Kepemilikan_Rumah__c.field-meta.xml
<CustomField>
    <fullName>Kesesuaian_Bukti_Kepemilikan_Rumah__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kesesuaian Bukti Kepemilikan Asset Lain</label>
    <type>Checkbox</type>
</CustomField>