force-app/main/default/objects/Credit_Checking__c/fields/Kesesuaian_Usaha__c.field-meta.xml
<CustomField>
    <fullName>Kesesuaian_Usaha__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kesesuaian Usaha</label>
    <type>Checkbox</type>
</CustomField>