force-app/main/default/objects/Credit_Checking__c/fields/Max_PD_Dalam_6_Bulan_Terakhir__c.field-meta.xml
<CustomField>
    <fullName>Max_PD_Dalam_6_Bulan_Terakhir__c</fullName>
    <label>Max. PD Dalam 6 Bulan Terakhir</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Pastdue</fullName>
            </value>
            <value>
                <fullName>31- 60 Hari</fullName>
            </value>
            <value>
                <fullName>61-90 Hari</fullName>
            </value>
            <value>
                <fullName>&gt;90 Hari</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>