force-app/main/default/objects/Credit_Checking__c/fields/Profesi__c.field-meta.xml
<CustomField>
    <fullName>Profesi__c</fullName>
    <label>Profesi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Entrepreneur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>