force-app/main/default/objects/Credit_Checking__c/fields/Reputasi_Debitur_Pasangan__c.field-meta.xml
<CustomField>
    <fullName>Reputasi_Debitur_Pasangan__c</fullName>
    <label>Reputasi Debitur/Pasangan</label>
    <type>TextArea</type>
</CustomField>