force-app/main/default/objects/Credit_Checking__c/fields/Reputasi_Keluarga_Debitur__c.field-meta.xml
<CustomField>
    <fullName>Reputasi_Keluarga_Debitur__c</fullName>
    <label>Reputasi Keluarga Debitur</label>
    <type>TextArea</type>
</CustomField>