force-app/main/default/objects/Credit_Checking__c/fields/Reschedule_dalam_12_Bulan_Terakhir__c.field-meta.xml
<CustomField>
    <fullName>Reschedule_dalam_12_Bulan_Terakhir__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reschedule dalam 12 Bulan Terakhir</label>
    <type>Checkbox</type>
</CustomField>