force-app/main/default/objects/Credit_Checking__c/fields/Sumber_Informasi__c.field-meta.xml
<CustomField>
    <fullName>Sumber_Informasi__c</fullName>
    <label>Sumber Informasi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>