force-app/main/default/objects/Credit_Checking__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey</label>
    <referenceTo>Survey__c</referenceTo>
    <relationshipLabel>Credits Checking</relationshipLabel>
    <relationshipName>Credits_Checking</relationshipName>
    <type>Lookup</type>
</CustomField>